--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,4 +21,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     # - run: npm start
+    - run: npm install
     - run: npm test
